--- a/HTML_CSS_Mission/Mission-01/index.html
+++ b/HTML_CSS_Mission/Mission-01/index.html
@@ -1,7 +1,7 @@
 <!-- HTML 작성 -->
 
 <!DOCTYPE html>
-<html lang="kr">
+<html lang="KR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
