--- a/HTML_CSS_Mission/Mission-02/index.html
+++ b/HTML_CSS_Mission/Mission-02/index.html
@@ -38,7 +38,7 @@
           <div class="shopping-info">
             <p class="title">솔로리빙 셀린 렌지대 60...</p>
             <div class="review-area first-review-area">
-              <div class="review-star" aria-label="별점 5점 만점에 4.5점"></div>
+              <div class="review-star" aria-label="별점 5점 만점에 4.5점" style="background-position: 0% 90%;"></div>
               <span class="review-count">(3,255)</span>
             </div>
           </div>
@@ -52,7 +52,7 @@
             <p class="title">옆 동네몰 레트로 LED 감성...</p>
             <img class="rocket-delivery" src="assets/icon/badge-rocket.svg" alt="로켓배송" aria-label="배송유형-로켓배송">
             <div class="review-area">
-              <div class="review-star" aria-label="별점 5점 만점에 4.5점" style="width: 95%;"></div>
+              <div class="review-star" aria-label="별점 5점 만점에 4.5점" style="background-position: 0% 90%;"></div>
               <Span class="review-count">(1,807)</Span>
             </div>
           </div>
@@ -66,7 +66,7 @@
             <p class="title">프리미엄 부착식 식기건조...</p>
             <p class="free-delivery" aria-label="배송유형-무료배송">무료배송</p>
             <div class="review-area">
-              <div class="review-star" aria-label="별점 5점 만점에 4점"></div>
+              <div class="review-star" aria-label="별점 5점 만점에 4점" style="background-position: 0% 80%;"></div>
               <span class="review-count">(2,423)</span>
             </div>
           </div>
@@ -81,7 +81,7 @@
             <p class="title">타지 않는 냄비 보오글 네모...</p>
             <img class="rocket-delivery" src="assets/icon/badge-rocket.svg" alt="로켓배송" aria-label="배송유형-로켓배송">
             <div class="review-area">
-              <div class="review-star" aria-label="별점 5점 만점에 5점"></div>
+              <div class="review-star" aria-label="별점 5점 만점에 5점" style="background-position: 0% 100%;"></div>
               <span class="review-count">(1,009)</span>
             </div>
           </div>
@@ -96,7 +96,7 @@
             <p class="title">베스트리빙 베이직 멀티 H...</p>
             <p class="free-delivery" aria-label="배송유형-무료배송">무료배송</p>
             <div class="review-area">
-              <div class="review-star" aria-label="별점 5점 만점에 4점"></div>
+              <div class="review-star" aria-label="별점 5점 만점에 4점" style="background-position: 0% 80%;"></div>
               <span class="review-count">(3,203)</span>
             </div>
           </div>
