--- a/HTML_CSS_Mission/Mission-03/index.html
+++ b/HTML_CSS_Mission/Mission-03/index.html
@@ -101,9 +101,9 @@
                   <img src="assets/slides/houseware-downy.jpg" alt="다우니 세제">
                 </a>
               </div>
-              <div class="carousel-item" role="listitem">
+              <div class="carousel-item hidden" role="listitem">
                 <a href="/">
-                 <img src="assets/slides/houseware-dandruff.jpg" alt="비듬 샴푸" style="display: none;">
+                 <img src="assets/slides/houseware-dandruff.jpg" alt="비듬 샴푸"">
                 </a>
               </div>
             </div>
@@ -229,9 +229,9 @@
                   <img src="assets/slides/kitchenware-tumbler.jpg" alt="텀블러">
                 </a>
               </div>
-              <div class="carousel-item" role="listitem">
+              <div class="carousel-item hidden" role="listitem">
                 <a href="/">
-                 <img src="assets/slides/kitchenware-lunchbox.jpg" alt="보온 도시락" style="display: none;">
+                 <img src="assets/slides/kitchenware-lunchbox.jpg" alt="보온 도시락">
                 </a>
               </div>
             </div>
