JS practice - event page code complete

--- a/js_basic_event/index.html
+++ b/js_basic_event/index.html
@@ -58,7 +58,7 @@
       </div>
       <div id='mbti-section'>
         <div class='title'># 과자 유형 검사</div>
-        <div class='mbti-container select'>
+        <div class='mbti-container'>
           <div class='mbti-question'>짠 과자가 더 좋다.</div>
           <div class='mbti-select'>
             <button type='button'>YES</button>
