--- a/HTML_CSS_Mission/Mission-01/index.html
+++ b/HTML_CSS_Mission/Mission-01/index.html
@@ -1,133 +1,140 @@
 <!-- HTML 작성 -->
 
 <!DOCTYPE html>
-<html lang="KR">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="./stylesheets/reset.css"> -->
-    <link rel="stylesheet" href="./stylesheets/main.css">
-    <link rel="shortcut icon" href="./assets/favicon/favicon.ico">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
-</head>
-<body>
+<html lang="Kr">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./stylesheets/main.css" />
+    <link rel="shortcut icon" href="./assets/favicon/favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+  <body>
     <div class="container">
-        <header class="header">
-            <h1>
-                <a href="https://www.coupang.com">
-                    <img src="./assets/logo/logo.png" alt="쿠팡으로 이동" class="logo">
-                </a>
-            </h1>
-        </header>
+      <header class="header">
+        <h1 class="brand">
+          <a href="https://www.coupang.com" class="brand__link">
+            <img
+              src="./assets/logo/logo.png"
+              alt="쿠팡으로 이동"
+              class="brand__image"
+            />
+          </a>
+        </h1>
+      </header>
 
-        <section>
-            <div class="section-title">
-                <h2 class="title">오늘의 발견</h2>
-                <span class="divider" aria-hidden="true">|</span>
-                <span class="sub-title">오늘 쿠팡이 엄선한 가장 핫한 제품</span>
-            </div>
-            <div class="section-content">
-                <div class="big-box top-left active" tabindex="0">
-                    <div>
-                        <a href="/">
-                            <img src="./assets/discovery/honeytea.jpg" alt="">
-                            <button class="buy-btn">
-                                <a href="/" class="arrow">&gt;</a>
-                            </button>
-                        </a>
-                    </div>
-                </div>
-                <div class="big-box top-right active" tabindex="0">
-                    <div>
-                        <a href="/">
-                            <img src="./assets/discovery/vaseline.jpg" alt="">
-                            <button class="buy-btn">
-                                <a href="/" class="arrow">&gt;</a>
-                            </button>
-                        </a>
-                    </div>
-                </div>
-                <div class="mid-left">
-                    <div class="small-box mgr16 active" tabindex="0">
-                        <div>
-                            <a href="/">
-                                <img src="./assets/discovery/handcream.jpg" alt="">
-                                <button class="buy-btn">
-                                    <a href="/" class="arrow">&gt;</a>
-                                </button>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="small-box active" tabindex="0">
-                        <div>
-                            <a href="/">
-                                <img src="./assets/discovery/bibs.jpg" alt="">
-                                <button class="buy-btn">
-                                    <a href="/" class="arrow">&gt;</a>
-                                </button>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="mid-right">
-                    <div class="small-box mgr16 active" tabindex="0">
-                        <div>
-                            <a href="/">
-                                <img src="./assets/discovery/hanssem.jpg" alt="">
-                                <button class="buy-btn">
-                                    <a href="/" class="arrow">&gt;</a>
-                                </button>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="small-box active" tabindex="0">
-                        <div>
-                            <a href="/">
-                                <img src="./assets/discovery/dumpling.jpg" alt="">
-                                <button class="buy-btn">
-                                    <a href="/" class="arrow">&gt;</a>
-                                </button>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="big-box bottom-left active" tabindex="0">
-                    <div>
-                        <a href="/">
-                            <img src="./assets/discovery/wettissue.jpg" alt="">
-                            <button class="buy-btn">
-                                <a href="/" class="arrow">&gt;</a>
-                            </button>
-                        </a>
-                    </div>
-                </div>
-                <div class="bottom-right">
-                    <div class="small-box mgr16 active" tabindex="0">
-                        <div>
-                            <a href="/">
-                                <img src="./assets/discovery/febreze.jpg" alt="">
-                                <button class="buy-btn">
-                                    <a href="/" class="arrow">&gt;</a>
-                                </button>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="small-box active" tabindex="0">
-                        <div>
-                            <a href="/">
-                                <img src="./assets/discovery/dyson.jpg" alt="">
-                                <button class="buy-btn">
-                                    <a href="/" class="arrow">&gt;</a>
-                                </button>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+      <section class="discovery">
+        <div class="discovery__headline">
+          <h2 class="discovery__title">오늘의 발견</h2>
+          <span class="divider" aria-hidden="true">|</span>
+          <p class="discovery__subtitle">오늘 쿠팡이 엄선한 가장 핫한 제품</p>
+        </div>
+        <ul class="discovery__list">
+          <li class="discovery__item">
+            <a href="/" class="discovery__link cardlink--large">
+              <img
+                src="./assets/discovery/honeytea.jpg"
+                alt="따뜻한 차 향기 오뚜기 꿀 생강차"
+                class="discovery__image"
+              />
+              <span class="discovery__button" aria-label="구매하기"></span>
+            </a>
+          </li>
+          <li class="discovery__item">
+            <a href="/" class="discovery__link cardlink--large">
+              <img
+                src="./assets/discovery/vaseline.jpg"
+                alt="바세린 런칭 기념"
+                class="discovery__image"
+              />
+              <span class="discovery__button" aria-label="구매하기"></span>
+            </a>
+          </li>
+          <li class="discovery__item">
+            <a href="/" class="discovery__link cardlink--small">
+              <img
+                src="./assets/discovery/handcream.jpg"
+                alt="kamill 핸드크림 모음"
+                class="discovery__image"
+              />
+              <span class="discovery__button" aria-label="구매하기"></span>
+            </a>
+          </li>
+          <li class="discovery__item">
+            <a href="/" class="discovery__link cardlink--small">
+              <img
+                src="./assets/discovery/bibs.jpg"
+                alt="빕스 아기사랑"
+                class="discovery__image"
+              />
+              <span class="discovery__button" aria-label="구매하기"></span>
+            </a>
+          </li>
+          <li class="discovery__item">
+            <a href="/" class="discovery__link cardlink--small">
+              <img
+                src="./assets/discovery/hanssem.jpg"
+                alt="한샘 수납장 모음"
+                class="discovery__image"
+              />
+              <span class="discovery__button" aria-label="구매하기"></span>
+            </a>
+          </li>
+          <li class="discovery__item">
+            <a href="/" class="discovery__link cardlink--small">
+              <img
+                src="./assets/discovery/dumpling.jpg"
+                alt="개성 왕만두"
+                class="discovery__image"
+              />
+              <span class="discovery__button" aria-label="구매하기"></span>
+            </a>
+          </li>
+          <li class="discovery__item">
+            <a href="/" class="discovery__link cardlink--large">
+              <img
+                src="./assets/discovery/wettissue.jpg"
+                alt="올담 물티슈"
+                class="discovery__image"
+              />
+              <span class="discovery__button" aria-label="구매하기"></span>
+            </a>
+          </li>
+          <li class="discovery__item">
+            <a href="/" class="discovery__link cardlink--small">
+              <img
+                src="./assets/discovery/febreze.jpg"
+                alt="향균 99.9% 페브리즈"
+                class="discovery__image"
+              />
+              <span class="discovery__button" aria-label="구매하기"></span>
+            </a>
+          </li>
+          <li class="discovery__item">
+            <a href="/" class="discovery__link cardlink--small">
+              <img
+                src="./assets/discovery/dyson.jpg"
+                alt="다이슨 무선 청소기"
+                class="discovery__image"
+              />
+              <span class="discovery__button" aria-label="구매하기"></span>
+            </a>
+          </li>
+        </ul>
+      </section>
     </div>
-</body>
+  </body>
 </html>
