HTML/CSS mission02 code modified

--- a/HTML_CSS_Mission/Mission-02/index.html
+++ b/HTML_CSS_Mission/Mission-02/index.html
@@ -1,110 +1,162 @@
 <!DOCTYPE html>
 <html lang="ko-KR">
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" href="assets/favicon/favicon.png" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="stylesheets/main.css" />
-  <title>오늘의 쇼핑 제안 - 쿠팡(Coupang)</title>
-</head>
-<body>
-  <div class="container">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="assets/favicon/favicon.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="stylesheets/main.css" />
+    <title>오늘의 쇼핑 제안 - 쿠팡(Coupang)</title>
+  </head>
+  <body>
     <header class="header">
-      <a href="https://www.coupang.com">
-        <h1>
+      <h1 class="brand">
+        <a href="https://www.coupang.com" class="brand__link">
           <picture>
-            <source srcset="assets/logo/logo.webp" class="logo">
-            <img src="assets/logo/logo.png" alt="쿠팡 쇼핑하기" class="logo">
+            <source srcset="assets/logo/logo.webp" type="image/webp" />
+            <img
+              src="assets/logo/logo.png"
+              alt="Coupang"
+              class="brand__image"
+            />
           </picture>
-        </h1>
-      </a>
+        </a>
+      </h1>
     </header>
-    <section class="section">
-      <h2 class="sub-title">
-        오늘의 쇼핑 제안
-      </h2>
-
-      <div class="shopping-list">
-
-        <div class="shopping-item">
-          <div class="discount" aria-label="할인율 정보">30%</div>
-          <a href="/">
-            <img src="assets/offer/furniture.jpg" alt="전자레인지 놓을 수 있는 수납가구" class="img">
-          </a>
-          <div class="shopping-info">
-            <p class="title">솔로리빙 셀린 렌지대 60...</p>
-            <div class="review-area first-review-area">
-              <div class="review-star four-point-five" aria-label="별점 5점 만점에 4.5점"></div>
-              <span class="review-count">(3,255)</span>
+    <section class="offer">
+      <h2 class="offer__title">오늘의 쇼핑 제안</h2>
+      <ul class="offer__list">
+        <li class="offer__item">
+          <a href="/" class="offer__link">
+            <div class="product">
+              <figure class="product__card">
+                <img src="assets/offer/furniture.jpg" alt="" />
+                <figcaption class="product__caption">
+                  솔로리빙 셀린 렌지대 600 800 주방 수납장 템바보드 전자레인지
+                  밥솥 에어프라이어 주방정리 수납장
+                </figcaption>
+              </figure>
+              <div class="product__discount">
+                <span class="sr-only">할인율</span>
+                <span class="discount">30%</span>
+              </div>
+              <div class="product__ratingStar">
+                <span class="sr-only">구매자 평점</span>
+                <span class="ratingStar score4-5" aria-label="5점 만점에 4.5점"></span>
+              </div>
+              <div class="product__review">
+                <span class="sr-only">리뷰 수</span>
+                <span class="review">(3,255)</span>
             </div>
-          </div>
-        </div>
-
-        <div class="shopping-item">
-          <a href="/">
-            <img src="assets/offer/renton.jpg" alt="랜턴" class="img">
           </a>
-          <div class="shopping-info">
-            <p class="title">옆 동네몰 레트로 LED 감성...</p>
-            <img class="rocket-delivery" src="assets/icon/badge-rocket.svg" alt="로켓배송" aria-label="배송유형-로켓배송">
-            <div class="review-area">
-              <div class="review-star four-point-five" aria-label="별점 5점 만점에 4.5점"></div>
-              <Span class="review-count">(1,807)</Span>
+        </li>
+        <li class="offer__item">
+          <a href="/" class="offer__link">
+            <div class="product">
+              <figure class="product__card">
+                <img src="assets/offer/renton.jpg" alt="" />
+                <figcaption class="product__caption">
+                  옆 동네몰 레트로 LED 감성 캠핑 랜턴 노란빛 대, 빈티지 브론즈
+                </figcaption>
+              </figure>
+              <div class="product__delivery">
+                <span class="sr-only">배송유형</span>
+                <span class="rocket"><img src="assets/icon/badge-rocket.svg" alt=""></span>
+              </div>
+              <div class="product__ratingStar">
+                <span class="sr-only">구매자 평점</span>
+                <span class="ratingStar score4-5" aria-label="5점 만점에 4.5점"></span>
+              </div>
+              <div class="product__review">
+                <span class="sr-only">리뷰 수</span>
+                <span class="review">(1,807)</span>
             </div>
-          </div>
-        </div>
-
-        <div class="shopping-item">
-          <a href="/">
-            <img src="assets/offer/drying-rack.jpg" alt="식기건조대" class="img">
           </a>
-          <div class="shopping-info">
-            <p class="title">프리미엄 부착식 식기건조...</p>
-            <p class="free-delivery" aria-label="배송유형-무료배송">무료배송</p>
-            <div class="review-area">
-              <div class="review-star four" aria-label="별점 5점 만점에 4점" style="background-position: 0% 80%;"></div>
-              <span class="review-count">(2,423)</span>
+        </li>
+        <li class="offer__item">
+          <a href="/" class="offer__link">
+            <div class="product">
+              <figure class="product__card">
+                <img src="assets/offer/drying-rack.jpg" alt="" />
+                <figcaption class="product__caption">
+                  프리미엄 부착식 식기건조대 (600~900)AL 싱크대선반 씽크선반 주방선반, 선택-2 프리미엄 식기건조대 800AL
+                </figcaption>
+              </figure>
+              <div class="product__delivery">
+                <span class="sr-only">배송유형</span>
+                <span class="free">무료배송</span>
+              </div>
+              <div class="product__ratingStar">
+                <span class="sr-only">구매자 평점</span>
+                <span class="ratingStar score4" aria-label="5점 만점에 4점"></span>
+              </div>
+              <div class="product__review">
+                <span class="sr-only">리뷰 수</span>
+                <span class="review">(2,423)</span>
             </div>
-          </div>
-        </div>
-
-        <div class="shopping-item">
-          <div class="discount" aria-label="할인율 정보">10%</div>
-          <a href="/">
-            <img src="assets/offer/boohgle.jpg" alt="타지않는 냄비" class="img">
           </a>
-          <div class="shopping-info">
-            <p class="title">타지 않는 냄비 보오글 네모...</p>
-            <img class="rocket-delivery" src="assets/icon/badge-rocket.svg" alt="로켓배송" aria-label="배송유형-로켓배송">
-            <div class="review-area">
-              <div class="review-star five" aria-label="별점 5점 만점에 5점"></div>
-              <span class="review-count">(1,009)</span>
+        </li>
+        <li class="offer__item">
+          <a href="/" class="offer__link">
+            <div class="product">
+              <figure class="product__card">
+                <img src="assets/offer/boohgle.jpg" alt="" />
+                <figcaption class="product__caption">
+                  타지 않는 냄비 보오글 네모 6종 풀세트 (51가지 안전시험 인증, hBN 세라믹 코팅)
+                </figcaption>
+              </figure>
+              <div class="product__discount">
+                <span class="sr-only">할인율</span>
+                <span class="discount">10%</span>
+              </div>
+              <div class="product__delivery">
+                <span class="sr-only">배송유형</span>
+                <span class="rocket"><img src="assets/icon/badge-rocket.svg" alt=""></span>
+              </div>
+              <div class="product__ratingStar">
+                <span class="sr-only">구매자 평점</span>
+                <span class="ratingStar score5" aria-label="5점 만점에 5점"></span>
+              </div>
+              <div class="product__review">
+                <span class="sr-only">리뷰 수</span>
+                <span class="review">(1,009)</span>
             </div>
-          </div>
-        </div>
-
-        <div class="shopping-item">
-          <div class="discount" aria-label="할인율 정보">25%</div>
-          <a href="/">
-            <img src="assets/offer/deskset.jpg" alt="책상세트" class="img">
           </a>
-          <div class="shopping-info">
-            <p class="title">베스트리빙 베이직 멀티 H...</p>
-            <p class="free-delivery" aria-label="배송유형-무료배송">무료배송</p>
-            <div class="review-area">
-              <div class="review-star four" aria-label="별점 5점 만점에 4점"></div>
-              <span class="review-count">(3,203)</span>
+        </li>
+        <li class="offer__item">
+          <a href="/" class="offer__link">
+            <div class="product">
+              <figure class="product__card">
+                <img src="assets/offer/deskset.jpg" alt="" />
+                <figcaption class="product__caption">
+                  베스트리빙 베이직 멀티 H형 1200 철제 책상세트, 화이트
+                </figcaption>
+              </figure>
+              <div class="product__discount">
+                <span class="sr-only">할인율</span>
+                <span class="discount">25%</span>
+              </div>
+              <div class="product__delivery">
+                <span class="sr-only">배송유형</span>
+                <span class="free">무료배송</span>
+              </div>
+              <div class="product__ratingStar">
+                <span class="sr-only">구매자 평점</span>
+                <span class="ratingStar score4" aria-label="5점 만점에 4점"></span>
+              </div>
+              <div class="product__review">
+                <span class="sr-only">리뷰 수</span>
+                <span class="review">(3,203)</span>
             </div>
-          </div>
-        </div>
-
-      </div>
+          </a>
+        </li>
+      </ul>
     </section>
-  </div>
-  
-</body>
+  </body>
 </html>
